enhance the test suite & add tests results